<resources>
    <string name="app_name">Registration</string>
    <string name="family">Family</string>
    <string name="name">Name</string>
    <string name="birth_date">Birth date</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="hello">Hello</string>
    <string name="calendar_title">Birth date</string>
</resources>