<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/name_title"
            app:layout_constraintTop_toTopOf="@+id/name_title" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/family_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/familyEditor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/family"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/family_title"
            app:layout_constraintTop_toTopOf="@+id/family_title" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthDate_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:focusable="false"
        android:textSize="16sp"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/family_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthDateEditor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/birth_date"
            android:inputType="date"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/birthDate_title"
            app:layout_constraintTop_toTopOf="@+id/birthDate_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/datePickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/birth_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDate_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickButton"
        app:passwordToggleContentDescription="description"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/password_title"
            app:layout_constraintTop_toTopOf="@+id/password_title" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_title"
        app:passwordToggleContentDescription="description"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirmEditor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/password_confirm_title"
            app:layout_constraintTop_toTopOf="@+id/password_confirm_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_confirm_title" />

</androidx.constraintlayout.widget.ConstraintLayout>